--- a/app/src/main/res/layout/workout_main.xml
+++ b/app/src/main/res/layout/workout_main.xml
@@ -4,27 +4,33 @@
     android:layout_height="match_parent">
 <TextView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:text="blaa"
-    android:textSize="25sp"
+    android:textSize="20sp"
     android:id="@+id/workout_name"
     android:layout_gravity="top"
-    android:textStyle="bold"
     android:gravity="center"
-    android:padding="20dp"
-    android:background="@color/colorGreen_dark"
-    android:textColor="@color/colorWhite"
+    android:background="@color/primary"
+    android:textColor="@color/primary_text"
     />
+    <ImageView
+        android:layout_below="@+id/workout_name"
+        android:id="@+id/picture_exercise"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/exercise_random"
+        android:scaleType="centerCrop"
+        />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/ExNewButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/fabsize"
+        android:layout_height="@dimen/fabsize"
         android:src="@drawable/addnewcross"
         android:onClick="AddNewExercise"
         android:layout_alignParentRight="true"
         android:layout_marginRight="18dp"
-        android:layout_marginTop="-30dp"
-        android:layout_below="@+id/workout_name"
+        android:layout_marginTop="-29dp"
+        android:layout_below="@+id/picture_exercise"
         />
 
 
@@ -35,7 +41,7 @@
         android:id="@+id/user_Exercise_Input"
         android:gravity="center"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/workout_name"
+        android:layout_below="@+id/picture_exercise"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
         />
@@ -44,22 +50,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/longpressdelete"
-        android:layout_weight="1"
         android:gravity="center"
         android:textColor="@color/colorGreen"
         android:textStyle="bold"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_alignParentBottom="true"/>
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/textlongdelete"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listview_exercises"
-        android:layout_margin="@dimen/multiRowMargin"
-        android:divider="@null"
-        android:dividerHeight="0dp"
+        android:layout_marginTop="@dimen/multiRowMargin"
+        android:divider="@color/divider"
+        android:dividerHeight="1dp"
         android:layout_below="@+id/user_Exercise_Input"
         android:paddingBottom="30dp"
+        android:background="@drawable/border_coloraccent"
+        android:layout_above="@+id/textlongdelete"
+        android:paddingRight="-2dp"
+        android:paddingLeft="-2dp"
+        android:layout_marginBottom="10dp"
         >
     </ListView>
 
