--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,9 +23,20 @@
     <color name="colorWhite_transparent">#80FFFFFF</color>
 
 
-    <color name="accent_material_light_1">#f5b800</color>
+    <color name="accent_material_light_1">#edca72</color>
     <color name="accent_material_light_2">#ffb74d</color>
     <color name="accent_material_light_3">#FB8C00</color>
     <color name="colorBlue">#4c4cff</color>
     <color name="transparent">#00ffff</color>
+
+    <color name="primary">#FF9800</color>
+    <color name="primary_dark">#F57C00</color>
+    <color name="primary_light">#FFE0B2</color>
+    <color name="accent">#E040FB</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+    <color name="icons">#212121</color>
+    <color name="divider">#B6B6B6</color>
+    <color name="background">#FFFAFAFA</color>
+
 </resources>
