--- a/app/src/main/res/layout/exp_list_group.xml
+++ b/app/src/main/res/layout/exp_list_group.xml
@@ -3,16 +3,15 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp"
-    android:background="#000000">
-
-
+    >
     <TextView
         android:id="@+id/lblListHeader"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17dp"
-        android:textColor="#f9f93d" />
+        android:textSize="20sp"
+        android:textColor="@color/primary_text"
+        android:text="test"
+        android:gravity="center_vertical"/>
 
 </LinearLayout>
