--- a/app/src/main/res/layout/exp_list_item.xml
+++ b/app/src/main/res/layout/exp_list_item.xml
@@ -8,9 +8,11 @@
         android:id="@+id/lblListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="17dip"
+        android:textSize="17sp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:text="test"
+        android:textColor="@color/secondary_text"/>
 
 </LinearLayout>
