--- a/app/src/main/res/anim/fab_close_new_ex.xml
+++ b/app/src/main/res/anim/fab_close_new_ex.xml
@@ -4,21 +4,20 @@
     android:startOffset="10">
 
     <scale
-        android:duration="200"
-        android:fromXScale="0.0"
-        android:fromYScale="0.0"
+        android:duration="100"
+        android:fromXScale="1.0"
+        android:fromYScale="1.0"
         android:interpolator="@android:anim/overshoot_interpolator"
-        android:toXScale="1.0"
+        android:toXScale="0.0"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toYScale="1.0"/>
+        android:toYScale="0.0"/>
 
     <translate
-        android:duration="200"
+        android:duration="100"
         android:fromXDelta="0.0"
-        android:fromYDelta="10%p"
-        android:toYDelta="0.0"
-        android:interpolator="@android:interpolator/anticipate_overshoot"/>
-
+        android:fromYDelta="0.0"
+        android:toYDelta="20%p"
+        android:interpolator="@android:interpolator/overshoot"/>
 
 </set>
