--- a/app/src/main/res/layout/workout_main.xml
+++ b/app/src/main/res/layout/workout_main.xml
@@ -52,17 +52,32 @@
         android:layout_marginRight="18dp"
         android:layout_marginTop="-29dp"
         android:layout_below="@+id/picture_exercise"
+        android:scaleType="centerCrop"
         />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/FABEditEx"
         android:layout_width="@dimen/fabsize"
         android:layout_height="@dimen/fabsize"
-        android:src="@drawable/barbell"
+        android:src="@drawable/tool"
         android:onClick="AddNewExercise"
         android:layout_alignParentRight="true"
         android:layout_marginRight="18dp"
         android:layout_marginTop="-120dp"
+        android:layout_below="@+id/picture_exercise"
+        android:visibility="invisible"
+        android:scaleType="centerCrop"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/FABNewEx"
+        android:layout_width="@dimen/fabsize"
+        android:layout_height="@dimen/fabsize"
+        android:src="@drawable/addnewcross"
+        android:onClick="AddNewExercise"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="18dp"
+        android:layout_marginTop="-190dp"
         android:layout_below="@+id/picture_exercise"
         android:visibility="invisible"
         android:scaleType="centerCrop"
