--- a/app/src/main/res/drawable/border_blue.xml
+++ b/app/src/main/res/drawable/border_blue.xml
@@ -4,5 +4,5 @@
     <!-- <solid android:color="#00000000" /> -->
     <!-- use this for a background colour -->
     <solid android:color="#FFF" />
-    <stroke android:width="1dp" android:color="#00CD00" />
+    <stroke android:width="2dp" android:color="@color/primary_dark" />
 </shape>
