--- a/app/src/main/res/layout/excercise_row_layout.xml
+++ b/app/src/main/res/layout/excercise_row_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:gravity="center"
+    android:gravity="left"
     tools:context="asdf.listviews.app.MainActivity">
 
 
@@ -13,9 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewEx"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="normal"
-        android:padding="5dp"
+        android:padding="10dp"
+        android:gravity="left"
         />
 
 </LinearLayout>
