--- a/app/src/main/res/layout/workout_main.xml
+++ b/app/src/main/res/layout/workout_main.xml
@@ -23,25 +23,7 @@
         android:scaleType="centerCrop"
         />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_below="@+id/workout_name"
-        android:id="@+id/rellayout_exchoice"
-        android:visibility="invisible"
-        android:background="@android:color/white"
-        >
-    <ExpandableListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="3dp"
-        android:layout_centerVertical="true"
-        android:id="@+id/listview_exercises_choice"
-        android:childDivider="@color/divider"
-        android:headerDividersEnabled="false"
-        >
-    </ExpandableListView>
-    </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/ExNewButton"
         android:layout_width="@dimen/fabsize"
@@ -107,9 +89,28 @@
         android:paddingRight="-4dp"
         android:paddingLeft="-4dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="40dp"
+
         >
     </ListView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="310dp"
+        android:layout_below="@+id/workout_name"
+        android:id="@+id/rellayout_exchoice"
+        android:visibility="invisible"
+        android:background="@drawable/border_blue"
+        >
+        <ExpandableListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="3dp"
+            android:layout_centerVertical="true"
+            android:id="@+id/listview_exercises_choice"
+            android:childDivider="@color/divider"
+            android:headerDividersEnabled="false"
+            >
+        </ExpandableListView>
+    </RelativeLayout>
 
 
 </RelativeLayout>
