--- a/app/src/main/res/layout/workout_row_layout.xml
+++ b/app/src/main/res/layout/workout_row_layout.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewWO"
-        android:layout_gravity="center"
+        android:layout_gravity="left"
         android:textSize="19sp"
         android:textStyle="normal"
         android:padding="15dp"
