--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,8 +32,11 @@
     <color name="primary">#FF9800</color>
     <color name="primary_dark">#F57C00</color>
     <color name="primary_light">#FFE0B2</color>
-    <color name="accent">#E040FB</color>
-    <color name="accent_second">#64dd17</color>
+    <color name="accent">#f44336</color>
+
+    <color name="FABNewEx">#64dd17</color>
+    <color name="FABEditEx">#ffea00</color>
+
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#212121</color>
