--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -40,5 +40,7 @@
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="android:colorBackground">@color/background</item>
+        <item name="android:textColorPrimaryInverse">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
     </style>
 </resources>
