--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,9 @@
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="android:colorBackground">@color/background</item>
+        <item name="android:textColorPrimaryInverse">@color/colorWhite</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_text</item>
     </style>
 
     <style name="green_fab" parent="OrangeApp" >
