--- a/app/src/main/res/drawable/border_blue.xml
+++ b/app/src/main/res/drawable/border_blue.xml
@@ -3,6 +3,7 @@
     <!-- use this for transparent -->
     <!-- <solid android:color="#00000000" /> -->
     <!-- use this for a background colour -->
-    <solid android:color="#FFF" />
-    <stroke android:width="2dp" android:color="@color/primary_dark" />
+    <solid android:color="@color/primary" />
+    <stroke android:width="2dp" android:color="@color/primary" />
+
 </shape>
