--- a/app/src/main/res/layout/exercise_new.xml
+++ b/app/src/main/res/layout/exercise_new.xml
@@ -6,7 +6,7 @@
     >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="360dp"
-    android:layout_height="500dp"
+    android:layout_height="550dp"
     android:layout_gravity="center"
     >
 
@@ -88,31 +88,38 @@
                     android:id="@+id/edit_new_ex_name"
                     android:hint="New Exercise Name"
                     android:gravity="center"
+                    android:textSize="20sp"
                     />
 
-                <EditText
-                    android:layout_width="200dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
+                    android:layout_gravity="bottom|center_horizontal"
                     android:id="@+id/edit_new_ex_head"
-                    android:hint="Brust/Rücken/..."
+                    android:hint="Click Me"
                     android:gravity="center"
-                    android:editable="false"/>
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:background="@android:drawable/list_selector_background"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    />
             </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
-        <ListView
-            android:layout_width="250dp"
-            android:layout_height="200dp"
-            android:id="@+id/listview_head_exercises"
-            android:visibility="visible"
-            android:layout_below="@id/linlayoutnumbers"
-            android:layout_marginLeft="130dp">
-        </ListView>
-
-
     </RelativeLayout>
+    <ListView
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/listview_head_exercises"
+        android:visibility="visible"
+        android:layout_below="@id/mainrellayout_new"
+        android:layout_marginLeft="130dp"
+        android:background="@color/colorWhite"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-10dp">
+    </ListView>
 
     <ImageView
         android:layout_width="100dp"
