--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="multiRowSize_small">15sp</dimen>
     <dimen name="multiRowMargin">15dp</dimen>
     <dimen name="fabsize">56dp</dimen>
+    <dimen name="fabsize_half">28dp</dimen>
+    <dimen name="fabsize_half_negative">-28dp</dimen>
 </resources>
